src/test/compile-fail/pred-on-wrong-slots.pat
.*Error: Unsatisfied .* lt(a, c).*
